<resources>
    <string name="app_name">E-Hospital</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">hospital@e-hospital.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="presentation">Presentation</string>

    <string name="help">Help</string>
    <string name="patient_management">Patient Management</string>

    <string name="appointment_management">Appointment Management</string>
    <string name="user_management">User Management</string>
    <string name="connection">Connection</string>
    <string name="inscription">Inscription</string>
    <string name="login">Login</string>
    <string name="history_hospital"> je suis la , appliation android</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome to E-Hospital!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="birthday">Birthday</string>
    <string name="address">"Address"</string>
    <string name="profession">Profession</string>
    <string name="lieu">Place</string>
    <string name="phone">Phone</string>
    <string name="mail">Email</string>
    <string name="save">Save</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="patient_list">Patients list</string>
    <string name="appointment_list">Appointment list</string>
    <string name="btn_new_appoint">New appointment</string>
    <string name="btn_new_patient">New patient</string>
    <string name="date_rv">Date</string>
    <string name="pattern">Pattern</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="service">Service</string>
    <string name="num_patient">Patient Number</string>
    <string name="new_appointment">New appointment</string>
    <string name="new_patient">New patient</string>
    <string name="my_account">My account</string>
    <string name="disconnect">Disconnect</string>
    <string name="error_fields">Please complete all fields</string>
    <string name="error_connection">Error connection</string>
    <string name="error_inscription">Error inscription</string>
    <string name="secretaire">Secretaire</string>
    <string name="doctor__prompt">Choose a doctor</string>

    <string-array name="doctor__arrays">
        <item>Dr Gaye</item>
        <item>Dr Thiam</item>
        <item>Dr Beye</item>
        <item>Dr Faye</item>

    </string-array>
    <string name="genre__prompt">Choose a genre</string>

    <string-array name="genre__arrays">
        <item>Man</item>
        <item>Woman</item>
    </string-array>
    <string name="title_activity_patient">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_secretaire">SecretaireActivity</string>
    <string name="temperature">Temperature</string>
    <string name="poid">Weight</string>
    <string name="tension">Tension</string>
    <string name="cut">Cut</string>
    <string name="new_consultation">New Consultation</string>
    <string name="consultation_management">Consultation management</string>
    <string name="appoint_account">Appointment and Account</string>
    <string name="imc">IMC</string>
    <string name="date_consult">Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->


    <!-- TODO: Remove or change this placeholder text -->


</resources>