<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_presentation"
            android:icon="@drawable/ic_home_24"
            android:title="@string/presentation" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_24"
            android:title="@string/help">

        </item>

    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_patient"
            android:icon="@drawable/ic_sick_24"
            android:title="@string/patient"
            android:visible="true"/>
        <item
            android:id="@+id/nav_medecin"
            android:icon="@drawable/ic_calendar_24"
            android:title="@string/doctor"
            android:visible="true"/>
        <item
            android:id="@+id/nav_secretaire"
            android:icon="@drawable/ic_user_24"
            android:title="@string/secretaire"
            android:visible="true">

        </item>
    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_connection"
            android:icon="@drawable/ic_login_24"
            android:title="@string/connection">

        </item>

    </group>
</menu>