<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InscriptionFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp">

        </ImageView>
        <TextView
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dim_top"
            android:textSize="@dimen/dim_title"
            android:gravity="center"
            android:text="@string/inscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
        <EditText
            android:id="@+id/txtFirstName"
            android:hint="@string/first_name"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
        <EditText
            android:id="@+id/txtLastName"
            android:hint="@string/last_name"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
        <EditText
            android:id="@+id/textBirthday"
            android:hint="@string/birthday"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
        <EditText
            android:id="@+id/txtProfession"
            android:hint="@string/profession"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
        <EditText
            android:id="@+id/txtAdresse"
            android:hint="@string/address"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
        <EditText
            android:id="@+id/textEmail"
            android:hint="@string/mail"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
        <EditText
            android:id="@+id/txtPhone"
            android:hint="@string/phone"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
        <RadioButton
            android:id="@+id/btnMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/man">

        </RadioButton>
        <RadioButton
            android:id="@+id/btnWoman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/woman">

        </RadioButton>
        <Button
            
            android:textColor="@color/white"
            android:id="@+id/btnSave"
            android:background="@color/darkBlue"
            android:layout_margin="@dimen/dim_all"
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>
    </LinearLayout>

</ScrollView>