<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsultationFragment"
    android:id="@+id/consultation">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:src="@mipmap/ic_launcher_foreground"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dim_middle"
            >

        </ImageView>
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPagerMain"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/pediatrie"
            >

        </androidx.viewpager.widget.ViewPager>
        <Button
            android:id="@+id/backConsult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/darkBlue"
            android:padding="@dimen/dim_all"
            android:text="retour"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/dim_left">

        </Button>
        <TextView
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dim_top"
            android:textSize="@dimen/dim_title"
            android:gravity="center"
            android:text="@string/new_consultation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
        <EditText
            android:id="@+id/num_patient"
            android:hint="@string/num_patient"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim_all">

        </EditText>
        <EditText
            android:id="@+id/motif"
            android:hint="@string/pattern"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim_all">

        </EditText>
        <DatePicker
            android:id="@+id/date_consult"
            android:text="@string/birthday"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim_all"
            android:datePickerMode="spinner"
            android:calendarViewShown="false">

        </DatePicker>
        <EditText
            android:id="@+id/txtLieu"
            android:hint="@string/lieu"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim_all">

        </EditText>
        <EditText
            android:id="@+id/poids"
            android:hint="@string/poid"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim_all">

        </EditText>
        <EditText
            android:id="@+id/taille"
            android:hint="@string/cut"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim_all">

        </EditText>
        <EditText
            android:id="@+id/tension"
            android:hint="@string/tension"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim_all">

        </EditText>
        <EditText
            android:id="@+id/temperature"
            android:hint="@string/temperature"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim_all">

        </EditText>

        <Button
            android:textColor="@color/white"
            android:id="@+id/btnSaveConsult"
            android:background="@color/darkBlue"
            android:layout_marginBottom="10dp"
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim_all">

        </Button>
    </LinearLayout>

</ScrollView>