<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAppointmentFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:src="@mipmap/ic_launcher_foreground"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dim_middle"
            >

        </ImageView>
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPagerMain"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/secretaire"
            >

        </androidx.viewpager.widget.ViewPager>
        <TextView
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dim_top"
            android:textSize="@dimen/dim_title"
            android:gravity="center"
            android:text="@string/new_appointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
        <EditText
            android:id="@+id/numPatient"
            android:hint="@string/num_patient"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
        <EditText
            android:id="@+id/doctorAppoint"
            android:hint="@string/doctor"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
        <EditText
            android:id="@+id/patternAppoint"
            android:hint="@string/pattern"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>

        <DatePicker
            android:id="@+id/dateAppoint"
            android:hint="@string/date_rv"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </DatePicker>

        <EditText
            android:id="@+id/serviceAppoint"
            android:hint="@string/service"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
    </LinearLayout>

</ScrollView>