<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_presentation">

    <fragment
        android:id="@+id/nav_presentation"
        android:name="com.enginer.e_hospital.ui.home.HomeFragment"
        android:label="@string/presentation"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_patient_management"
        android:name="com.enginer.e_hospital.PatientManagementFragment"
        android:label="@string/patient_management"
        tools:layout="@layout/fragment_patient_management" />
    <fragment
        android:id="@+id/nav_appoint_management"
        android:name="com.enginer.e_hospital.AppointmentManagementFragment"
        android:label="@string/appointment_management"
        tools:layout="@layout/fragment_appointment_management" />
    <fragment
        android:id="@+id/btnNewPatient"
        android:name="com.enginer.e_hospital.InscriptionFragment"
        android:label="@string/patient_management"
        tools:layout="@layout/fragment_inscription" />
    <fragment
        android:id="@+id/newAppointment"
        android:name="com.enginer.e_hospital.AddAppointmentFragment"
        android:label="@string/appointment_management"
        tools:layout="@layout/fragment_add_appointment" />
    <activity
        android:id="@+id/nav_connection"
        android:name="com.enginer.e_hospital.ui.login.LoginActivity"
        android:label="@string/connection"
        tools:layout="@layout/activity_login"
        >

    </activity>


</navigation>