<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientManagementFragment">

    <!-- TODO: Update blank fragment layout -->

   <FrameLayout
       android:id="@+id/containerPatientList"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
           android:id="@+id/containerListPatient"
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:visibility="visible">

           <ImageView
               android:src="@mipmap/ic_launcher_foreground"
               android:layout_width="wrap_content"
               android:layout_height="@dimen/dim_middle"
               >

           </ImageView>
           <androidx.viewpager.widget.ViewPager
               android:id="@+id/viewPagerMain"
               android:layout_width="match_parent"
               android:layout_height="140dp"
               android:layout_marginBottom="8dp"
               android:background="@drawable/secretaire"
               >

           </androidx.viewpager.widget.ViewPager>

           <Button
               android:id="@+id/btnNewPatient"
               android:layout_marginLeft="@dimen/dim_left"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="New patient"
               android:textColor="@color/white">

           </Button><Button
               android:id="@+id/btnUpdate"
               android:layout_marginLeft="@dimen/dim_left"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="update"
               android:textColor="@color/white">

           </Button>
           <TextView
               android:textSize="@dimen/dim_title"
               android:textColor="@color/darkBlue"
               android:gravity="center"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/patient_list">

           </TextView>
           <TableLayout
               android:id="@+id/tableLayout"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/dim_all"
               android:layout_gravity="center">
               <TableRow
                   >
                   <TextView
                       android:text="@string/num_patient"
                       android:layout_marginRight="22dp"
                       >

                   </TextView>
                   <TextView
                       android:text="@string/last_name"
                       android:layout_marginRight="22dp">
                   </TextView>
                   <TextView
                       android:text="@string/first_name"
                       android:layout_marginRight="22dp">
                   </TextView>
                   <TextView
                       android:text="@string/address"
                       android:layout_marginRight="22dp">
                   </TextView>
                   <TextView
                       android:text="@string/phone"
                       android:layout_marginRight="22dp">
                   </TextView>
               </TableRow>
           </TableLayout>
       </LinearLayout>
   </FrameLayout>


</ScrollView>