<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListRvPatientFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:src="@mipmap/ic_launcher_foreground"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dim_middle"
            >

        </ImageView>
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPagerMain"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/pediatrie"
            >
        </androidx.viewpager.widget.ViewPager>
        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim_all"
            android:layout_gravity="center">
            <TableRow
                >

                <TextView
                    android:text="@string/date_rv"
                    android:layout_marginRight="22dp">
                </TextView>
                <TextView
                    android:text="@string/pattern"
                    android:layout_marginRight="22dp">
                </TextView>
                <TextView
                    android:text="@string/doctor"
                    android:layout_marginRight="22dp">
                </TextView>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</FrameLayout>